--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     </head>
     <body>
         <div id="header">
-            <h1>Today is Nick's birthday 🎉</h1>
-            <img id="bff-img" src="images/nick.jpg">
-            <h2 id="bday-age">24 years old</h2>
-            <h4 id="bday-date">01.11.2022</h4>
+            <h1>Today is Tebogo's birthday 🎉</h1>
+            <img id="bff-img" src="images/IMG_7332.jpeg">
+            <h2 id="bday-age">26 years old</h2>
+            <h4 id="bday-date">18.07.2024</h4>
         </div>
         
         <div class="gift-section">
